--- a/lesson-20/scss/style.scss
+++ b/lesson-20/scss/style.scss
@@ -1,28 +1,33 @@
 // Reset styles
 @import "_reset.scss";
 
-// Common styles
-@import "_common.scss";
-
 // Manual fonts
 @import "_fonts.scss";
 
 //-------------Variables--------------
 // Main variables
-$main-font: "DM Serif Text", serif; //font
+$main-font: 'Cormorant Infant', serif; //font
 $main-font-size: 18px; //font size
-$main-color: #FFF; //font color
+$white-color: #FFF; // white color
+$black-color: #000; // black color
 $main-line-height: 1.2; //line height
-$main-width: 100%;
-$main-height: 100%;
+$full-percentage: 100%;
 $main-transition: all 0.3s ease;
-//
+$align-center: center; // ???
+
+// Breakpoint variables
+$pc-breakpoint: 767.98px;
+$tablet-breakpoint: 960.98px;
+$mobile-breakpoint: 767.98px;
+$small-mobile-breakpoint: 440.98px;
+$old-small-mobile-breakpoint: 320.98px;
 
 
 body {
   font-family: $main-font;
   font-size: $main-font-size;
   line-height: $main-line-height;
+
   .menu-open & {
     overflow: hidden;
   }
@@ -36,7 +41,7 @@ body {
 
 .wrapper {
   overflow: clip;
-  min-height: 100%;
+  min-height: $full-percentage;
   display: flex;
   flex-direction: column;
 
@@ -46,15 +51,19 @@ body {
 }
 
 //-----------Header-----------
-
+// block header
 .header {
   font-family: Merriweather, serif;
   font-weight: 700;
   background: #FEFBF7;
-  width: $main-width;
-  top: 0;
-  left: 0;
-  z-index: 50;
+  width: $full-percentage;
+
+  &--position {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 50;
+  }
 
   &__container {
     display: flex;
@@ -62,6 +71,18 @@ body {
     align-items: center;
     gap: 40px;
     min-height: 100px;
+
+    @media (max-width: $tablet-breakpoint) {
+      min-height: 50px;
+    }
+
+    @media (max-width: $small-mobile-breakpoint) {
+      gap: 10px;
+    }
+
+    @media (max-width: $old-small-mobile-breakpoint) {
+      gap: 5px;
+    }
   }
 
   &__logo {
@@ -72,6 +93,14 @@ body {
     flex-shrink: 0;
     position: relative;
     z-index: 10;
+
+    @media (max-width: $small-mobile-breakpoint) {
+      font-size: 25px;
+    }
+
+    @media (max-width: $old-small-mobile-breakpoint) {
+      font-size: 22px;
+    }
   }
 
   &__action {
@@ -81,54 +110,178 @@ body {
     column-gap: 20px;
     position: relative;
     z-index: 10;
+
+    @media (max-width: $small-mobile-breakpoint) {
+      column-gap: 10px;
+    }
   }
 
   &__icon-menu {
     display: none;
-  }
 
-  &--position {
-    position: fixed;
-  }
-}
+    @media (max-width: $tablet-breakpoint) {
+      display: block;
+      width: 30px;
+      height: 18px;
+      flex: 0 0 30px;
+      position: relative;
+      z-index: 5;
 
-.menu__list {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  column-gap: 36px;
-  row-gap: 10px;
-  transition: transform 0.4s ease;
-}
+      &::before,
+      &::after,
+      span {
+        content: '';
+        height: 2px;
+        width: $full-percentage;
+        position: absolute;
+        left: 0;
+        background-color: $black-color;
+        transition: $main-transition;
+      }
 
-.list__link {
-  font-size: 20px;
-  line-height: 1;
-  //text-shadow: 1px 1px 1px pink;
-}
-
-.list__item {
-  &--active {
-    color: #D58417;
-    text-decoration: underline;
-  }
-
-  &--arrow {
-    position: relative;
-
-    .list__link {
-      display: flex;
-      align-items: center;
-      gap: 4px;
+      &::before {
+        top: 0;
+      }
 
       &::after {
+        bottom: 0;
+      }
+
+      span {
+        top: 50%;
+        margin-top: -1px;
+      }
+
+      .menu-open &::before,
+      .menu-open &::after {
+        top: 50%;
+        margin-top: -1px;
+      }
+
+      .menu-open & span {
+        transform: scale(0);
+      }
+
+      .menu-open &::before {
+        transform: rotate(-45deg);
+      }
+
+      .menu-open &::after {
+        transform: rotate(45deg);
+      }
+    }
+  }
+}
+
+// block menu 
+.menu {
+  @media (max-width: $tablet-breakpoint) {
+    &__body {
+      position: fixed;
+      width: $full-percentage;
+      height: $full-percentage;
+      top: 0;
+      left: -100%;
+      transition: left 0.3s;
+      background-color: #e7ddd2;
+      padding: 70px 15px 30px 15px;
+      overflow: auto;
+
+      &::before {
         content: '';
-        flex: 0 0 16px;
-        width: 16px;
-        height: 8px;
-        background: url("../img/icons/header-menu-arrow.png") 0 50%/ 100% no-repeat;
-        transition: transform 0.4s ease;
-        //background-size: 50%;
+        position: fixed;
+        width: $full-percentage;
+        height: 50px;
+        top: 0;
+        left: $full-percentage;
+        transition: left 0.3s;
+        z-index: 2;
+        background-color: #e7ddd2;
+      }
+
+      .menu-open &,
+      .menu-open &::before {
+        left: 0;
+      }
+    }
+  }
+
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 36px;
+    row-gap: 10px;
+
+    @media (max-width: $tablet-breakpoint) {
+      flex-direction: column;
+      text-align: right;
+      row-gap: 28px;
+    }
+  }
+}
+
+// block list
+.list {
+  &__item {
+    @media (any-hover: hover) {
+      &:hover {
+        .list__link {
+          color: #D58417;
+          text-decoration: underline;
+        }
+      }
+    }
+
+    @media (max-width: $tablet-breakpoint) {
+      text-align: right;
+    }
+
+    &--active {
+      color: #D58417;
+      text-decoration: underline;
+    }
+
+    &--arrow {
+      position: relative;
+      // @media any-hover for list__item--arrow
+      @media (any-hover: hover) {
+        &:hover {
+          .menu__submenu {
+            opacity: 1;
+            transform: translate(0px, -10px);
+            visibility: visible;
+            pointer-events: all;
+          }
+
+          .list__link::after {
+            transform: rotate(-180deg);
+          }
+        }
+      }
+    }
+  }
+
+  &__link {
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+
+    @media (max-width: $tablet-breakpoint) {
+      display: block;
+    }
+
+    &::after {
+      content: '';
+      flex: 0 0 16px;
+      width: 16px;
+      height: 8px;
+      background: url("../img/icons/header-menu-arrow.png") 0 50%/ 100% no-repeat;
+      transition: transform 0.4s ease;
+
+      @media (max-width: $tablet-breakpoint) {
+        display: none;
       }
     }
   }
@@ -136,7 +289,7 @@ body {
 
 .menu__submenu {
   position: absolute;
-  top: 100%;
+  top: $full-percentage;
   left: 0;
   padding-top: 47px;
   visibility: hidden;
@@ -144,19 +297,21 @@ body {
   transition: $main-transition;
   transform: translate(0px, 10px);
   pointer-events: none;
-}
 
-// @media
-// any-hover
-@media (any-hover: hover) {
-  .list__item--arrow :hover,
-  .menu__submenu {
-    opacity: 1;
-    transform: translate(0px, -10px);
+  @media (max-width: $tablet-breakpoint) {
+    position: relative;
     visibility: visible;
-    pointer-events: all;
-  }
+    opacity: 1;
+    padding-top: 10px;
+    transform: translate(0, 0);
 
+    @media (any-hover: hover) {
+      .list__item--arrow:hover & {
+        transform: translate(0, 0);
+      }
+
+    }
+  }
 }
 
 .submenu {
@@ -165,14 +320,34 @@ body {
     border-radius: 7px;
     padding: 15px;
     background-color: rgba(246, 238, 228, 0.85);
+    @media (max-width: $tablet-breakpoint) {
+      width: 100%;
+      border-radius: 4px;
+    }
   }
 
-  &__item:not(:last-child) {
-    margin-bottom: 10px;
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+      @media (max-width: $tablet-breakpoint) {
+        margin-bottom: 20px;
+      }
+    }
   }
 
   &__link {
     font-size: 16px;
+
+    @media (any-hover: hover) {
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    @media (max-width: $tablet-breakpoint) {
+      color: #181818;
+      font-size: 22px;
+    }
   }
 }
 
@@ -183,9 +358,15 @@ body {
     position: relative;
     transition: transform 0.3s ease;
 
+    @media (any-hover: hover) {
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
     img {
-      max-width: $main-width;
-      height: $main-height;
+      max-width: $full-percentage;
+      height: $full-percentage;
     }
 
     span {
@@ -196,11 +377,119 @@ body {
       background-color: #FF3333;
       min-width: 12px;
       height: 12px;
-      color: $main-color;
+      color: $white-color;
       font-size: 9px;
       text-align: center;
       line-height: 1.3;
     }
+  }
+}
+// Main. Page
+// block page
+.page {
+  padding: 150px 0;
+  // .page__products
+  &__products {
+  }
+}
+
+.products {
+  // .products__container
+  &__container {
+  }
+
+  // .products__about
+  &__about {
+  }
+
+  // .products__content
+  &__content {
+  }
+}
+
+.about {
+  //margin: 0 auto;
+  text-align: center;
+
+  &:not(:last-child) {
+    margin-bottom: 128px;
+  }
+  // .about__title
+  &__title {
+    color: #0E333D;
+    font-family: 'DM Serif Text', serif;
+    font-size: 48px;
+    line-height: 1.2;
+
+    &:not(:last-child) {
+      margin-bottom: 29px;
+    }
+
+  }
+
+  // .about__subtitle
+  &__subtitle {
+    color: #8C8B8A;
+    font-family: Raleway, serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, auto);
+  //grid-auto-flow: dense;
+  gap: 31px;
+  // .content__item
+  &__item {
+    //grid-column: span 2;
+  }
+}
+
+.item {
+  // .item--big
+  &--big {
+    //grid-column: span 2;
+    grid-row: span 2;
+  }
+
+  // .item__wrapper
+  &__wrapper {
+
+  }
+
+  // .item__image
+  &__image {
+    width: $full-percentage;
+    
+    margin-bottom: 16px;
+  }
+
+  // .item__description
+  &__description {
+  }
+}
+
+.description {
+  color: $black-color;
+  font-family: 'Cormorant Infant', serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.4;
+
+  // .description__title
+  &__title {
+
+    &:not(:last-child) {
+      margin-bottom: 14px;
+    }
+  }
+
+  // .description__price
+  &__price {
   }
 }
 
