--- a/lesson-20/scss/style.css
+++ b/lesson-20/scss/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@500&display=swap");
@@ -247,6 +247,31 @@ body {
     row-gap: 28px;
   }
 }
+.menu__submenu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding-top: 47px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease;
+  transform: translate(0px, 10px);
+  pointer-events: none;
+}
+@media (max-width: 960.98px) {
+  .menu__submenu {
+    position: relative;
+    visibility: visible;
+    opacity: 1;
+    padding-top: 10px;
+    transform: translate(0, 0);
+  }
+}
+@media (max-width: 960.98px) and (any-hover: hover) {
+  .list__item--arrow:hover .menu__submenu {
+    transform: translate(0, 0);
+  }
+}
 
 @media (any-hover: hover) {
   .list__item:hover .list__link {
@@ -273,9 +298,6 @@ body {
     visibility: visible;
     pointer-events: all;
   }
-  .list__item--arrow:hover .list__link::after {
-    transform: rotate(-180deg);
-  }
 }
 .list__link {
   font-size: 20px;
@@ -286,6 +308,11 @@ body {
 @media (max-width: 960.98px) {
   .list__link {
     display: block;
+  }
+}
+@media (any-hover: hover) {
+  .list__item--arrow:hover .list__link::after {
+    transform: rotate(-180deg);
   }
 }
 .list__link::after {
@@ -299,32 +326,6 @@ body {
 @media (max-width: 960.98px) {
   .list__link::after {
     display: none;
-  }
-}
-
-.menu__submenu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  padding-top: 47px;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.3s ease;
-  transform: translate(0px, 10px);
-  pointer-events: none;
-}
-@media (max-width: 960.98px) {
-  .menu__submenu {
-    position: relative;
-    visibility: visible;
-    opacity: 1;
-    padding-top: 10px;
-    transform: translate(0, 0);
-  }
-}
-@media (max-width: 960.98px) and (any-hover: hover) {
-  .list__item--arrow:hover .menu__submenu {
-    transform: translate(0, 0);
   }
 }
 
@@ -395,6 +396,9 @@ body {
 .page {
   padding: 150px 0;
 }
+.products__container {
+  max-width: 1230px;
+}
 .about {
   text-align: center;
 }
@@ -412,7 +416,7 @@ body {
 }
 .about__subtitle {
   color: #8C8B8A;
-  font-family: Raleway, serif;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -421,25 +425,45 @@ body {
 .content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, auto);
-  gap: 31px;
+  min-height: 775px;
+  gap: 29px;
 }
 .item--big {
   grid-row: span 2;
 }
-.item__image {
+.item--big .item__image {
+  aspect-ratio: 398/728;
+}
+.item__wrapper {
+  overflow: hidden;
   width: 100%;
+}
+.item__wrapper:not(:last-child) {
   margin-bottom: 16px;
+}
+.item__image {
+  border-radius: 5px;
+  background-color: #dacab3;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 369/277;
+  object-fit: cover;
+}
+.item__image img {
+  width: 100%;
+  height: 100%;
 }
 .description {
   color: #000;
-  font-family: "Cormorant Infant", serif;
   font-size: 24px;
   font-weight: 700;
   line-height: 1.4;
 }
+.description__title {
+  display: inline-block;
+}
 .description__title:not(:last-child) {
-  margin-bottom: 14px;
+  margin-bottom: 12px;
 }
 
 /*# sourceMappingURL=style.css.map */
