--- a/lesson-20/scss/style.css
+++ b/lesson-20/scss/style.css
@@ -89,7 +89,7 @@ body {
   display: flex;
   flex-direction: column;
 }
-.wrapper main {
+.wrapper > main {
   flex-grow: 1;
 }
 
@@ -432,7 +432,6 @@ body {
   color: #0E333D;
   font-family: "DM Serif Text", serif;
   font-size: 48px;
-  line-height: 1.2;
 }
 .about__title:not(:last-child) {
   margin-bottom: 29px;
